kubernetes/generatedManifests/test/infrastructure/linkerd/1-manifest/rbac.authorization.k8s.io_v1-clusterrole-default-linkerd-linkerd-destination.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"rbac.authorization.k8s.io/v1","kind":"ClusterRole","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","linkerd.io/control-plane-component":"destination","linkerd.io/control-plane-ns":"linkerd"},"name":"linkerd-linkerd-destination"},"rules":[{"apiGroups":["apps"],"resources":["replicasets"],"verbs":["list","get","watch"]},{"apiGroups":["batch"],"resources":["jobs"],"verbs":["list","get","watch"]},{"apiGroups":[""],"resources":["pods","endpoints","services","nodes", [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    linkerd.io/control-plane-component: destination
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-linkerd-destination
rules:
- apiGroups:
  - apps
  resources:
  - replicasets
  verbs:
  - list
  - get
  - watch
- apiGroups:
  - batch
  resources:
  - jobs
  verbs:
  - list
  - get
  - watch
- apiGroups:
  - ""
  resources:
  - pods
  - endpoints
  - services
  - nodes
  - namespaces
  verbs:
  - list
  - get
  - watch
- apiGroups:
  - linkerd.io
  resources:
  - serviceprofiles
  verbs:
  - list
  - get
  - watch
- apiGroups:
  - discovery.k8s.io
  resources:
  - endpointslices
  verbs:
  - list
  - get
  - watch
