kubernetes/generatedManifests/test/infrastructure/linkerd/1-manifest/rbac.authorization.k8s.io_v1-clusterrole-default-linkerd-policy.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"rbac.authorization.k8s.io/v1","kind":"ClusterRole","metadata":{"labels":{"app.kubernetes.io/managed-by":"pulumi","app.kubernetes.io/part-of":"Linkerd","linkerd.io/control-plane-component":"destination","linkerd.io/control-plane-ns":"linkerd"},"name":"linkerd-policy"},"rules":[{"apiGroups":[""],"resources":["pods"],"verbs":["get","list","watch"]},{"apiGroups":["policy.linkerd.io"],"resources":["authorizationpolicies","httproutes","meshtlsauthentications","networkauthenticatio [...]
  labels:
    app.kubernetes.io/managed-by: pulumi
    app.kubernetes.io/part-of: Linkerd
    linkerd.io/control-plane-component: destination
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-policy
rules:
- apiGroups:
  - ""
  resources:
  - pods
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - policy.linkerd.io
  resources:
  - authorizationpolicies
  - httproutes
  - meshtlsauthentications
  - networkauthentications
  - servers
  - serverauthorizations
  verbs:
  - get
  - list
  - watch
