kubernetes/generatedManifests/test/infrastructure/linkerd/1-manifest/v1-secret-linkerd-linkerd-policy-validator-k8s-tls.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXVENDQWtHZ0F3SUJBZ0lSQUpxemFWRDJFQjluK3hzS3ZxSHV1MzB3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa2JHbHVhMlZ5WkMxd2IyeHBZM2t0ZG1Gc2FXUmhkRzl5TG14cGJtdGxjbVF1YzNaagpNQjRYRFRJeU1EZ3hNVEEyTkRNeU0xb1hEVEl6TURneE1UQTJORE15TTFvd0x6RXRNQ3NHQTFVRUF4TWtiR2x1CmEyVnlaQzF3YjJ4cFkza3RkbUZzYVdSaGRHOXlMbXhwYm10bGNtUXVjM1pqTUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBemxQSG96bWRiWVo3ZUw0cVZRT0ovc2VIOXd4ZUtzQVN0bnVDUXBZeAp3MTRGRzA0di9xYzV0b [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcFFJQkFBS0NBUUVBemxQSG96bWRiWVo3ZUw0cVZRT0ovc2VIOXd4ZUtzQVN0bnVDUXBZeHcxNEZHMDR2Ci9xYzV0b1lGbXg5UnlwMExvUTRhVWtWMVpaRFNSNkExb0QvMHQzWDE5U2prbWF3Vng2SFF1eEdLb2VNd2c3QjMKV2Y4dFQxeExNSlN5UEVnL1lmMlFSdDZKa2pKVngzVHdoeXNyMFE4Sjl3SXJpQ3pvL1JoUGhqNnNScmpjWWl5egphR1RuT1BGNVFOci9ycjlqOThkYW5mMnVtTTZVdmRMMnBsMHVra3ZjQWQrbEY5aUVFMXBPRTUrWGdZQURQaWhPClJVWHFScUZidDRFT1JuVVRRSlQ1R3UxNmpPdVVjV3JhQ0NYNHRXUVFCKzdabWF0d0tqbFNJWTYrRG5yTnJQUVMKaTNPU283NUpXa [...]
kind: Secret
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"tls.crt":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXVENDQWtHZ0F3SUJBZ0lSQUpxemFWRDJFQjluK3hzS3ZxSHV1MzB3RFFZSktvWklodmNOQVFFTEJRQXcKTHpFdE1Dc0dBMVVFQXhNa2JHbHVhMlZ5WkMxd2IyeHBZM2t0ZG1Gc2FXUmhkRzl5TG14cGJtdGxjbVF1YzNaagpNQjRYRFRJeU1EZ3hNVEEyTkRNeU0xb1hEVEl6TURneE1UQTJORE15TTFvd0x6RXRNQ3NHQTFVRUF4TWtiR2x1CmEyVnlaQzF3YjJ4cFkza3RkbUZzYVdSaGRHOXlMbXhwYm10bGNtUXVjM1pqTUlJQklqQU5CZ2txaGtpRzl3MEIKQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBemxQSG96bWRiWVo3ZUw0cVZRT0ovc2VIOXd4ZUtz [...]
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    linkerd.io/control-plane-component: destination
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-policy-validator-k8s-tls
  namespace: linkerd
type: kubernetes.io/tls
