kubernetes/generatedManifests/test/infrastructure/linkerd/1-manifest/v1-secret-linkerd-linkerd-proxy-injector-k8s-tls.yaml
apiVersion: v1
data:
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVekNDQWp1Z0F3SUJBZ0lSQUowZFkvbzlEVElnQWxuUGlrV3ZNREV3RFFZSktvWklodmNOQVFFTEJRQXcKTFRFck1Da0dBMVVFQXhNaWJHbHVhMlZ5WkMxd2NtOTRlUzFwYm1wbFkzUnZjaTVzYVc1clpYSmtMbk4yWXpBZQpGdzB5TWpFd01UZ3lNREkwTkRGYUZ3MHlNekV3TVRneU1ESTBOREZhTUMweEt6QXBCZ05WQkFNVElteHBibXRsCmNtUXRjSEp2ZUhrdGFXNXFaV04wYjNJdWJHbHVhMlZ5WkM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUEKQTRJQkR3QXdnZ0VLQW9JQkFRRE0vRXdPUmphTmlsTGRaa2JJWUNNMVc3cVR5N3lkV3hudHVnZjZHTXZXMjdTVwpXMlpRb3RxMS92Rmw0L [...]
  tls.key: LS0tLS1CRUdJTiBSU0EgUFJJVkFURSBLRVktLS0tLQpNSUlFcEFJQkFBS0NBUUVBelB4TURrWTJqWXBTM1daR3lHQWpOVnU2azh1OG5Wc1o3Ym9IK2hqTDF0dTBsbHRtClVLTGF0Zjd4WmVQNlBKa2ZmQXNVYjFMVXd4a0hZaWszdmpHNUNCanVta2llMmJTSVZMQjhaRlVTcmtsdy80bnMKMFM1WHFNRVdtU0IrSER6ZWpVWC9HSXRLZDcvVDkveFBZSDVsMFpBRTAvS1dkRGszb3JkYXNKZHRUMEdCMzFzQQp3Y3JxSWhnTTA1cFk2MU1SSlNrUDhpTEgvcGZYNUtqeHNwcEpBdlI5MDNKbzNicUpGc2JtM0tZTkppc0FFN0NJCi9UejZnZWFIODh1T0tHaEJwT0UzZVdIbUNOU3FwQU5YZGxUcFNiQlh1bS84QU1jQkY1aFN6RVp6Y1ZFMm9Nb2wKMkdXMkdndmd2V [...]
kind: Secret
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","data":{"tls.crt":"LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVekNDQWp1Z0F3SUJBZ0lSQUowZFkvbzlEVElnQWxuUGlrV3ZNREV3RFFZSktvWklodmNOQVFFTEJRQXcKTFRFck1Da0dBMVVFQXhNaWJHbHVhMlZ5WkMxd2NtOTRlUzFwYm1wbFkzUnZjaTVzYVc1clpYSmtMbk4yWXpBZQpGdzB5TWpFd01UZ3lNREkwTkRGYUZ3MHlNekV3TVRneU1ESTBOREZhTUMweEt6QXBCZ05WQkFNVElteHBibXRsCmNtUXRjSEp2ZUhrdGFXNXFaV04wYjNJdWJHbHVhMlZ5WkM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUEKQTRJQkR3QXdnZ0VLQW9JQkFRRE0vRXdPUmphTmlsTGRaa2JJWUNNMVc3cVR5N3lkV3hudHVn [...]
    linkerd.io/created-by: linkerd/helm stable-2.12.1
  labels:
    app.kubernetes.io/managed-by: pulumi
    linkerd.io/control-plane-component: proxy-injector
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-proxy-injector-k8s-tls
  namespace: linkerd
type: kubernetes.io/tls
