kubernetes/generatedManifests/test/infrastructure/linkerd/1-manifest/v1-service-linkerd-linkerd-identity-headless.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.12.1"},"labels":{"app.kubernetes.io/managed-by":"pulumi","linkerd.io/control-plane-component":"identity","linkerd.io/control-plane-ns":"linkerd"},"name":"linkerd-identity-headless","namespace":"linkerd"},"spec":{"clusterIP":"None","ports":[{"name":"grpc","port":8080,"targetPort":8080}],"selector":{"linkerd.io/control-plane-component":"identity"}}}
    linkerd.io/created-by: linkerd/helm stable-2.12.1
  labels:
    app.kubernetes.io/managed-by: pulumi
    linkerd.io/control-plane-component: identity
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-identity-headless
  namespace: linkerd
spec:
  clusterIP: None
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  selector:
    linkerd.io/control-plane-component: identity
