kubernetes/generatedManifests/test/infrastructure/linkerd/1-manifest/v1-service-linkerd-linkerd-identity.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.11.2"},"labels":{"app.kubernetes.io/managed-by":"pulumi","linkerd.io/control-plane-component":"identity","linkerd.io/control-plane-ns":"linkerd"},"name":"linkerd-identity","namespace":"linkerd"},"spec":{"ports":[{"name":"grpc","port":8080,"targetPort":8080}],"selector":{"linkerd.io/control-plane-component":"identity"},"type":"ClusterIP"}}
    linkerd.io/created-by: linkerd/helm stable-2.11.2
  labels:
    app.kubernetes.io/managed-by: pulumi
    linkerd.io/control-plane-component: identity
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-identity
  namespace: linkerd
spec:
  ports:
  - name: grpc
    port: 8080
    targetPort: 8080
  selector:
    linkerd.io/control-plane-component: identity
  type: ClusterIP
