kubernetes/generatedManifests/test/infrastructure/linkerd/1-manifest/v1-service-linkerd-linkerd-policy-validator.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{"linkerd.io/created-by":"linkerd/helm stable-2.12.1"},"labels":{"app.kubernetes.io/managed-by":"pulumi","linkerd.io/control-plane-component":"destination","linkerd.io/control-plane-ns":"linkerd"},"name":"linkerd-policy-validator","namespace":"linkerd"},"spec":{"ports":[{"name":"policy-https","port":443,"targetPort":"policy-https"}],"selector":{"linkerd.io/control-plane-component":"destination"},"type":"ClusterIP"}}
    linkerd.io/created-by: linkerd/helm stable-2.12.1
  labels:
    app.kubernetes.io/managed-by: pulumi
    linkerd.io/control-plane-component: destination
    linkerd.io/control-plane-ns: linkerd
  name: linkerd-policy-validator
  namespace: linkerd
spec:
  ports:
  - name: policy-https
    port: 443
    targetPort: policy-https
  selector:
    linkerd.io/control-plane-component: destination
  type: ClusterIP
